feat: add SQLAlchemy URL support and consolidate DB config
## Affected Areas
- 🔧 Config: database setting and URL handling
- 🐍 CLI: --database parsing and aliases
- 🐳 Docker: image extras and default env
- 📚 Docs: README examples and env sample
- 🧪 Tests: fixtures and new config tests
- 🧩 Packaging: pyproject extras for DB drivers
- ⚙️ Smithery: config schema and example

## Key Changes
- 🔧 Use ZETTELKASTEN_DATABASE env/setting
- 🔗 Support SQLAlchemy URLs (Postgres/MySQL/SQLServer)
- 🗂️ ZettelkastenConfig.get_db_url built for URLs
- 🧾 Ensure SQLite directories are created
- 🛠️ Main logs masked DB URL when non-sqlite
- 🧰 CLI accepts --database; aliases hidden
- 🐳 Docker installs DB extras and sets DB env
- 📘 README updated with usage and examples
- 🧪 Added tests for config URL handling
- 🧾 Updated smithery.yaml and .env.example

## Breaking Changes
- ⚠️ ZETTELKASTEN_DATABASE_PATH renamed/merged into ZETTELKASTEN_DATABASE
- ⚠️ CLI --database-path / --database-url now map to --database (suppressed)

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # Zettelkasten MCP Server Configuration
 
 ZETTELKASTEN_NOTES_DIR=./data/notes
-ZETTELKASTEN_DATABASE_PATH=./data/db/zettelkasten.db
+# Accepts a filesystem path (default) or a SQLAlchemy URL (e.g. postgresql+psycopg://user:pass@host:5432/dbname)
+ZETTELKASTEN_DATABASE=./data/db/zettelkasten.db
 ZETTELKASTEN_LOG_LEVEL=INFO
