--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,15 @@ dev = [
     "isort>=5.12.0",
     "mypy>=1.0.0",
 ]
+postgresql = [
+    "psycopg[binary]>=3.1.0",
+]
+mysql = [
+    "pymysql>=1.1.0",
+]
+sqlserver = [
+    "pyodbc>=5.0.0",
+]
 
 [project.scripts]
 zettelkasten-mcp = "zettelkasten_mcp.main:main"
