--- a/smithery.yaml
+++ b/smithery.yaml
@@ -8,7 +8,7 @@ startCommand:
     type: object
     required:
       - notesDir
-      - databasePath
+      - database
     properties:
       logLevel:
         type: string
@@ -21,15 +21,18 @@ startCommand:
 
           Blank stores under `./data/notes` relative path to mcp working
           directory.
-      databasePath:
+      database:
         type: string
         default: ""
         description: >-
-          Where the SQLite DB resides.
+          SQLite file path or SQLAlchemy URL for the index database.
 
-          Blank stores under `./data/db/zettelkasten.db` relative path to mcp
+          Leave blank to use `./data/db/zettelkasten.db` relative to the MCP
           working directory.
+
+          PostgreSQL, MySQL, and SQL Server are supported via SQLAlchemy
+          connection URLs, e.g. `postgresql+psycopg2://user:password@host:port/dbname`
   exampleConfig:
     logLevel: INFO
     notesDir: /data/notes
-    databasePath: /data/db/zettelkasten.db
+    database: /data/db/zettelkasten.db
