--- a/smithery.yaml
+++ b/smithery.yaml
@@ -3,6 +3,7 @@
 runtime: container
 startCommand:
   type: stdio
+  command: zettelkasten-mcp
   configSchema:
     # JSON Schema defining the configuration options for the MCP.
     type: object
