feat(server/mcp): add Smithery server factory and config schema; integrate Smithery into pyproject
## Affected Areas
- 🧭 Server MCP
- 🧩 Smithery configuration
- 📦 Packaging / pyproject
- 🧰 CLI scripts
- 📁 Deployment config (smithery.yaml)

## Key Changes
- 🧭 Add ZettelkastenConfigSchema
- 🏷️ Register @smithery.server create_server factory
- 🔁 Return FastMCP instance from create_server
- ✨ Add smithery to pyproject dependencies
- ⬆️ Bump mcp dependency to >=1.15.0
- 🛠️ Add dev & playground console scripts
- 🧩 Add [tool.smithery] server entry in pyproject
- 📝 Move runtime TODO in smithery.yaml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,12 +17,13 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
-    "mcp[cli]>=1.2.0",
+    "mcp[cli]>=1.15.0",
     "sqlalchemy>=2.0.0",
     "pydantic>=2.0.0",
     "python-frontmatter>=1.0.0",
     "markdown>=3.4.0",
     "python-dotenv>=1.0.0",
+    "smithery>=0.4.2",
 ]
 
 [project.optional-dependencies]
@@ -45,6 +46,11 @@ sqlserver = [
 
 [project.scripts]
 zettelkasten-mcp = "zettelkasten_mcp.main:main"
+dev = "smithery.cli.dev:main"
+playground = "smithery.cli.playground:main"
+
+[tool.smithery]
+server = "zettelkasten_mcp.server.mcp_server:create_server"
 
 [tool.setuptools]
 package-dir = {"" = "src"}
