--- a/.github/workflows/docker-publish.yaml
+++ b/.github/workflows/docker-publish.yaml
@@ -13,17 +13,46 @@ jobs:
       - name: Lowercase actor
         run: echo "ACTOR=$(echo $GITHUB_ACTOR | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ env.ACTOR }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push
-        uses: docker/build-push-action@v4
+        uses: docker/build-push-action@v6
         with:
           context: .
           file: ./Dockerfile
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: ghcr.io/${{ env.ACTOR }}/zettelkasten-mcp:latest
+          labels: |
+            org.opencontainers.image.source=${{ github.server_url }}/${{ github.repository }}
+            org.opencontainers.image.revision=${{ github.sha }}
+
+      - name: Validate published multi-arch manifest
+        run: |
+          set -eux
+          IMAGE="ghcr.io/${ACTOR}/zettelkasten-mcp:latest"
+          docker buildx imagetools inspect "${IMAGE}" | tee /tmp/imagetools.txt
+          grep -q "linux/amd64" /tmp/imagetools.txt
+          grep -q "linux/arm64" /tmp/imagetools.txt
+
+      - name: Publish image capability summary
+        run: |
+          {
+            echo "### Docker Image Architecture Support"
+            echo ""
+            echo "- Image: \`ghcr.io/${ACTOR}/zettelkasten-mcp:latest\`"
+            echo "- Platforms: \`linux/amd64\`, \`linux/arm64\`"
+            echo "- SQL Server support: \`linux/amd64\` only"
+            echo "- PostgreSQL/MySQL/SQLite support: both platforms"
+          } >> "${GITHUB_STEP_SUMMARY}"
