--- a/.github/workflows/docker-publish.yaml
+++ b/.github/workflows/docker-publish.yaml
@@ -8,22 +8,51 @@ jobs:
   build-and-push:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5 # v4
 
       - name: Lowercase actor
         run: echo "ACTOR=$(echo $GITHUB_ACTOR | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@c7c53464625b32c7a7e944ae62b3e17d2b600130 # v3.7.0
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@8d2750c68a42422c14e847fe6c8ac0403b4cbd6f # v3.12.0
+
       - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v2
+        uses: docker/login-action@5e57cd118135c172c3672efd75eb46360885c0ef # v3.6.0
         with:
           registry: ghcr.io
           username: ${{ env.ACTOR }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push
-        uses: docker/build-push-action@v4
+        uses: docker/build-push-action@263435318d21b8e681c14492fe198d362a7d2c83 # v6.18.0
         with:
           context: .
           file: ./Dockerfile
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: ghcr.io/${{ env.ACTOR }}/zettelkasten-mcp:latest
+          labels: |
+            org.opencontainers.image.source=${{ github.server_url }}/${{ github.repository }}
+            org.opencontainers.image.revision=${{ github.sha }}
+
+      - name: Validate published multi-arch manifest
+        run: |
+          set -eux
+          IMAGE="ghcr.io/${ACTOR}/zettelkasten-mcp:latest"
+          docker buildx imagetools inspect "${IMAGE}" | tee /tmp/imagetools.txt
+          grep -q "linux/amd64" /tmp/imagetools.txt
+          grep -q "linux/arm64" /tmp/imagetools.txt
+
+      - name: Publish image capability summary
+        run: |
+          {
+            echo "### Docker Image Architecture Support"
+            echo ""
+            echo "- Image: \`ghcr.io/${ACTOR}/zettelkasten-mcp:latest\`"
+            echo "- Platforms: \`linux/amd64\`, \`linux/arm64\`"
+            echo "- SQL Server support: \`linux/amd64\` only"
+            echo "- PostgreSQL/MySQL/SQLite support: both platforms"
+          } >> "${GITHUB_STEP_SUMMARY}"
