--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,7 +6,7 @@ repos:
         additional_dependencies: []
 
   - repo: https://github.com/PyCQA/isort
-    rev: 5.14.0
+    rev: 5.13.2
     hooks:
       - id: isort
         name: isort (python)
@@ -18,4 +18,4 @@ repos:
     rev: v1.10.0
     hooks:
       - id: mypy
-        stages: [commit]
+        stages: [manual]
